# Python-USB-WP-Raman-Examples

./: .gitignore  README.md  log.py
ARM/: BatchTest.py  ExtTrigger.py  ExtTriggerSaveToFile.py  GetADC.py  GetFPGARev.py  GetModelConfig.py  GetPD.py  GetSpectra.py  GetSpectrumArbitraryLength.py  GetTest.py  GetTimestampedSpectra.py  ReadCompilerOptions.py  SetIntegrationTime1ms.py  SetLaserOFF.py  SetLaserON.py  SetLaserPwr_100.py  SetLaserPwr_25.py  SetLaserPwr_50.py  SetTest.py  WriteADCToFile.py  WriteSpectraToFile.py
Andor/: test-andor.py
BLE/: get_characteristics.py  read_readable_char.py  read_spectra.py  scan_nearby.py
ENLIGHTEN-Support/: enlighten_ubuntu_installer  enlighten_ubuntu_launcher  integration_acquire.py  qtimer_study.py  settleTime.py  usb-201-clock.py
FX2-InGaAs/: ExtTrigger.py  ExtTriggerToFile.py  GetADC.py  GetFPGARev.py  GetInterlockStatus.py  GetSpectra.py  GetSpectra_updated.py  GetTest.py  GetTriggerMode.py  SetGainHigh.py  SetGainLow.py  SetIntegrationTime1ms.py  SetTest.py  SetTriggerMode_External.py  SetTriggerMode_Internal.py  Set_gain.py  Set_test_pattern.py  TEC_control.py  WriteADCToFile.py  WriteSpectraToFile.py
FX2-Silicon/: AreaScan.py  AreaScan2048.py  BatchTest.py  CharacterizeDarks.py  ExtTrigger.py  ExtTriggerToFile.py  GetADC.py  GetFPGARev.py  GetFirmwareRevisions.py  GetInterlockStatus.py  GetModelConfig.py  GetSpectra.py  GetSpectra2048.py  GetSpectraEP2-Multi.py  GetSpectraEP2.py  GetSpectraEP6-Multi.py  GetSpectraEP6.py  GetSpectraGraph.py  GetTest.py  (+41 more)
fw-util/: README.md  config.yaml  fw_util.py  pyproject.toml
(+214 files in other folders)
